--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "delaunator": "^5.0.1",
+    "gif.js": "^0.2.0",
     "lucide-react": "^0.552.0",
     "next": "^15.0.0",
     "react": "^19.0.0",
